--- a/_config.yml
+++ b/_config.yml
@@ -49,11 +49,11 @@ background-img: "../img/intro-bg.jpg"
 
 dynamic-typing: True
 shuffle: True # Shuffle the lines.
-loop: False
+loop: True
 loop-count: False # Set False for infinite loop, or set any number for finite loop.
 type-speed: 10
 start-delay: 200
-delete-delay: 5000
+delete-delay: 2000
 lines: # You can add HTML Tags in the Text
   - text: "Pa'riba"
   - text: "Pa'bajo"
