--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ force-https: False
 
 lang: "en"
 author: "Malcolm Haslam"
-title: " Pa'qualquier lao "
+title: " Pa'tolao "
 description: "Pa'llà, Pa'ca, Pa'riba, Pa'bajo,  PA'QUALQUIER LAO ."
 keywords: ""
 favicon: "/img/favicon.ico"
