--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ timeline-img: "/img/timeline/default.png"
 # Contact #
 ###########
 
-email: "your@email.here"
+email: "marionymalcolm@gmail.com"
 
 ################
 # Author Blurb #
@@ -139,7 +139,7 @@ email: "your@email.here"
 # This works best when your author blurb image has a transparent background, or matches your site background color.
 
 # if the author_blurb is not set, then this feature is skipped
-author_blurb: "John Smith is an awesome person. He lives in Flatland, where he works on two-dimensional engineering projects. In his spare time, John likes to eat cotton candy."
+author_blurb: ""
 author_blurb_image: "/img/author.png"
 
 ##################
@@ -151,12 +151,6 @@ social:
     url: "https://facebook.com/"
   - title: "twitter"
     url: "https://twitter.com/"
-  - title: "github"
-    url: "https://github.com/PanosSakkos/personal-jekyll-theme"
-  - title: "bitcoin"
-    url: "https://blockchain.info/address/1LHuKC9Em3KA5yoZaf7nngnNdf9K7s2gSi"
-  - title: "rss"
-    url: "/feed.xml"
 
 ############
 # 404 page #
@@ -168,7 +162,7 @@ err-404-img: "/img/labtocat.png"
 # GPG on Keybase #
 ##################
 
-keybase-username: johnsmith
+keybase-username: Malcolm Haslam
 keybase-in-social: True
 keybase-in-footer: True
 
@@ -181,8 +175,13 @@ keybase-in-footer: True
 pages_list:
   About: 'about'
   Blog: 'latest-post'
-  Timeline: 'timeline'
+  Gear: 'gear'
   Contact: 'contact'
+  
+ # Images Shown in Gear
+gear_list:
+  '/img/gear/elixir3.jpg': 'gear/elixie3'
+  '/img/gear/whisperlite.jpg': 'gear/whisperlite'
 
 # Exclusion list from the generated _site
 
