--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ force-https: False
 
 lang: "en"
 author: "Malcolm Haslam"
-title: " Pa'tolao "
-description: "Pa'llà, Pa'ca, Pa'riba, Pa'bajo,  PA'QUALQUIER LAO ."
+title: " Pa'todolao "
+description: "Pa'llà, Pa'ca, Pa'riba, Pa'bajo,  PA'TODO LAO ."
 keywords: ""
 favicon: "/img/favicon.ico"
 
